# django-override-autonow

./: .flake8  CHANGELOG.rst  LICENSE  README.md  README.rst  manage.py  setup.cfg
.github/workflows/: release-package.yml  test-package.yml
src/override_autonow/: __init__.py  context_decorator.py
tests/: test_context_decorator.py
tests/testapp/: models.py  settings.py
tests/testapp/migrations/: 0001_initial.py
