[metadata]
name = django-override-autonow
version = attr: override_autonow.__version__
description = Temporarily disable auto_now and auto_now_add option in Django's DateField and DateTimeField, so that you can save the desired value to these fields.
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
license = MIT License
author = Takayuki Hirayama
author_email = th.windbell+github@gmail.com
url = https://github.com/yukihira1992/django-override-autonow
project_urls =
    Bug Tracker = https://github.com/yukihira1992/django-override-autonow/issues
classifiers =
    Development Status :: 1 - Planning
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Testing :: Mocking
    Topic :: Software Development :: Testing :: Unit
keywords = django, pytest, unittest, auto_now, auto_now_add, override, date, datetime

[options]
package_dir =
    = src
packages = find:
install_requires =
    Django>=2.2
python_requires = >=3.7

[options.extras_require]
testing =
    pytest
    pytest-django

[options.packages.find]
where = src
